MIgration to Spring Data Jpa and Hibernate.